# tg_auto_test

./: .gitignore  .jscpd.json  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml  pytest.ini  ruff.toml  vulture_whitelist.py
.github/workflows/: ci.yml  release.yml
.opencode/: launch.json  settings.local.json
.opencode/agents/: reproduce-bug.md
docs/: ENV_VARS.md  RELEASE_WORKFLOW.md
scripts/: demo_ui.py  example_serverless_echo.py
tests/: test_demo_start_button.py
tests/unit/: demo_server_mocks.py  helpers_ptb_app.py  html_test_app.py  puppet_recorder_mocks.py  sse_helpers.py  stub_classification_registry.py  test_async_conversation_wait_bug.py  test_async_non_blocking_handler_bug.py  test_behavioral_parity.py  test_built_js_error_detail.py  test_click_returns_message_bug.py  test_demo_duck_backend.py  test_demo_edit_message.py  test_demo_integration.py  test_demo_serialize.py  test_demo_serialize_entities.py  test_demo_server.py  test_demo_server_api_state.py  test_demo_telethon_backend.py  test_demo_trace_stream.py  test_edit_text_and_delete_message_bugs.py  test_file_store.py  test_get_edit_bug.py  test_get_response_skips_edit_bug.py  test_html_parse_mode.py  test_html_parse_mode_serialize.py  test_incremental_sse_bug.py  test_lifecycle_hooks.py  test_media_metadata_audio_duration.py  test_media_metadata_mp3_duration.py  test_multi_response_bug.py  test_photo_upload_no_handler_bug.py  test_photo_upload_response_bug.py  test_puppet_recorder_codegen.py  test_puppet_recorder_models.py  test_puppet_recorder_routes.py  test_puppet_recorder_server.py  test_sanity.py  (+25 more)
web/: eslint.config.js  index.html  knip.json  package-lock.json  package.json  stylelint.config.js  tsconfig.json  vite.config.ts
(+173 files in other folders)
