[project]
name = "tg-auto-test"
version = "1.3.1"
description = "Serverless Telegram bot testing library"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.6,<23",
    "telethon>=1.42.0,<2",
    "Pillow>=11.0,<13",
]

[project.optional-dependencies]
demo = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[dependency-groups]
dev = [
    "tg-auto-test[demo]",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-xdist>=3.8.0,<4",
    "ruff>=0.15.0,<0.16",
    "pylint>=4.0.4,<5",
    "vulture>=2.14.0,<3",
    "build>=1.2.0,<2",
    "twine>=6.0.0,<7",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_auto_test*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"tg_auto_test.demo_ui.server" = [
    "static/ui/*",
    "templates/*",
]
"tg_auto_test.demo_ui.puppet_recorder" = [
    "templates/*",
]
